Fixing scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -200,7 +200,7 @@ mark {
 
 code {
     height: 300px;
-    overflow-y: scroll;
+    overflow-y: auto;
     font-family: Consolas, monaco, monospace;
     font-size: small;
 }
@@ -882,7 +882,7 @@ table tr:nth-child(odd) {
     flex-wrap: wrap;
     align-content: baseline;
     gap: 2px 3px;
-    overflow-y: scroll !important;
+    overflow-y: auto !important;
 }
 
 .mitre-text {
